# marmosa

./: AGENTS.md  COMPARISON.md  Cargo.toml  INDEX_JSON_ANALYSIS.md  LEARNINGS_AFTER_BENCHMARK_RUN.md  fix.py  patch_event_file_manager.py  patch_index_manager.py  patch_initializer.py  patch_ledger.py  test_obj_safe.rs
backlog/: 001-integration-test-eventstore-projections.md  002-tag-based-projection-indices.md  003-projection-rebuild.md  004-event-indexing.md  005-filesystem-backend-std.md  008-postgres-projection-store.md  010-snapshot-support.md  011-retention-policies.md  012-subscription-live-updates.md  013-cross-process-locks.md  014-crash-recovery.md  015-advanced-event-reading.md  017-decision-models.md  018-parallel-projection-rebuild.md  019-admin-maintenance-api.md  020-cloudflare-r2-backend.md  021-esp32-flash-backend.md  README.md
benches/: append_benchmarks.rs
docs/: README.md  archiving-compression.md  async-await-guidance.md  bind-order-fix.md  cache-warming.md  configuration-guide.md  configuration-validation.md  cross-platform-paths.md  database-path-configuration.md  dcb-projections.md  dcb-specification.md  durability-quick-reference.md  final-cross-platform-fixes.md  implementation-summary-parallel-projection-rebuilding.md  linux-permission-fix.md  projection-directory-missing-fix.md  projections-tag-indexing.md  release-process.md  release-quick-reference.md  release-status.md  retention-policies.md  sample-tests-cross-platform-audit.md  smart-retention.md  specifications-index.md  test-cleanup-and-seeding-review.md  testing-configuration-override-fix.md  ubuntu-test-failures-analysis.md  use-cases.md  workspace-structure-guide.md
docs_opossum/: README.md  bind-order-fix.md  configuration-guide.md  configuration-validation.md  cross-platform-paths.md  database-path-configuration.md  final-cross-platform-fixes.md  linux-permission-fix.md  (+6 more)
marmosa-wasm/: Cargo.toml  README.md
marmosa-wasm/src/: decision.rs  lib.rs  projections.rs  storage.rs
marmosa-wasm/tests/: web.rs
marmosa-wasm/ts/: marmosa.d.ts  testing.ts
(+281 files in other folders)
