[package]
name = "marmosa"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde-json-core = "0.6"

[features]
default = []
std = ["serde/std"]

[dev-dependencies]
serde_json = "1.0.149"
tokio = { version = "1", features = ["full", "test-util"] }
uuid = { version = "1.22.0", features = ["v4"] }
