[workspace]
members = ["marmosa-wasm"]

[package]
name = "marmosa"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
default = []
std = ["serde/std", "serde_json/std"]
in-memory = ["std"]
testing = ["in-memory", "std"]

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1", features = ["full", "test-util"] }
typetag = "0.2.21"
uuid = { version = "1.22.0", features = ["v4"] }
