[package]
name = "marmosa-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
marmosa = { path = "..", features = ["in-memory"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
send_wrapper = { version = "0.6", features = ["futures"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
